Fix the form colors and opacity
Previously, the opacity of the placeholder text
was too high, therefore it did not look like a
placeholder.

Also, the input color was black and it was not
very readable on a dark background.

--- a/styles.css
+++ b/styles.css
@@ -57,12 +57,13 @@ input, textarea, select {
 input, textarea {
   background-color: #25319ae2;
   border: 1px solid #25319ae2;
+  color: #ffffff;
 }
 
 input::placeholder,
 textarea::placeholder {
   color: #99f1ff;
-  opacity: 0.7;
+  opacity: 0.4;
 }
 
 #company-label {
